# rules_elide

./: .bazelignore  .bazelrc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .typos.toml  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  MODULE.bazel  README.md  RELEASING.md  SECURITY.md  buildbuddy.yaml  release-please-config.json
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/: actionlint.yaml  dependabot.yml  renovate.json
.github/workflows/: benchmarks.yml  ci.yml  codeql.yml  publish-to-bcr.yml  release.yml  release_prep.sh  scorecards.yml
benchmarks/: .bazelrc  BUILD.bazel  MODULE.bazel  RESULTS.md  bench.sh  bench_suite.sh  compile_modes.sh  gen.sh  incremental.sh  javac_cache.sh  run_all.sh
benchmarks/codspeed/: README.md  requirements.txt  test_compile_bench.py  test_e2e_bench.py
benchmarks/deepgraph/: README.md  bench.sh  gen.py
benchmarks/pgo/: README.md  collect.sh  gen_workrequest.py
benchmarks/sources/java/sample/: JavaClass1.java  JavaClass10.java  JavaClass11.java  JavaClass12.java  JavaClass13.java  JavaClass14.java  JavaClass15.java  JavaClass16.java  JavaClass17.java  JavaClass18.java  JavaClass19.java  JavaClass2.java  JavaClass20.java  JavaClass21.java  JavaClass22.java  JavaClass23.java  JavaClass24.java  JavaClass25.java  JavaClass26.java  JavaClass27.java  JavaClass28.java  JavaClass29.java  JavaClass3.java  JavaClass30.java  JavaClass4.java  JavaClass5.java  JavaClass6.java  JavaClass7.java  JavaClass8.java  JavaClass9.java
benchmarks/sources/kotlin/sample/: KotlinClass1.kt  KotlinClass10.kt  KotlinClass11.kt  KotlinClass12.kt  KotlinClass13.kt  KotlinClass14.kt  KotlinClass15.kt  KotlinClass16.kt  KotlinClass17.kt  KotlinClass18.kt  KotlinClass19.kt  KotlinClass2.kt  KotlinClass20.kt  KotlinClass21.kt  KotlinClass22.kt  KotlinClass23.kt  KotlinClass24.kt  KotlinClass25.kt  KotlinClass26.kt  KotlinClass27.kt  KotlinClass28.kt  KotlinClass29.kt  KotlinClass3.kt  KotlinClass30.kt  KotlinClass4.kt  KotlinClass5.kt  KotlinClass6.kt  KotlinClass7.kt  KotlinClass8.kt  KotlinClass9.kt
config/javac/: BUILD.bazel
config/kotlinc/: BUILD.bazel
docs/: BUILD.bazel  defs.md  extensions.md  format.md  java.md  kotlin.md  kotlin_builder.md  native_image.md  providers.md  toolchain.md
docs/superpowers/plans/: 2026-06-13-elide-kotlin-builder.md  2026-06-24-release-flow.md
docs/superpowers/specs/: 2026-06-20-kotlinc-persistent-worker-pgo.md  2026-06-24-buildbuddy-rbe-design.md  2026-06-24-e2e-codspeed-benchmarks-design.md  2026-06-24-release-flow-slsa-bcr-design.md
e2e/: gen_fixture.py
e2e/abi_avoidance/: README.md  run.sh
e2e/ic_correctness/: README.md  run.sh  wl1113_regression.sh
e2e/integration/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
e2e/integration/sample/: Greeter.kt  format_demo.java
e2e/kotlin_builder/: BUILD.bazel  MODULE.bazel
e2e/kotlin_builder/proc/: Marker.java  MarkerProcessor.java
e2e/kotlin_builder/sample/: Annotated.kt  Greeter.kt
e2e/rbe/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
e2e/rbe/sample/: HelloTest.java
e2e/smoke/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
e2e/smoke/sample/: App.kt  GreeterTest.kt  HelloTest.java  Main.java
e2e/vanilla/: BUILD.bazel  MODULE.bazel  README.md
e2e/vanilla/sample/: Hello.java  Main.java
elide/: BUILD.bazel  defs.bzl  extensions.bzl  providers.bzl  toolchain.bzl
elide/kotlin/: BUILD.bazel  toolchain.bzl
elide/kotlin/builder/: BUILD.bazel  BuiltinPlugins.kt  ElideCompile.kt  ElideWorker.kt  Fallback.kt  Flagfile.kt  Jdeps.kt  Main.kt  Router.kt  Worker.kt
elide/kotlin/builder/proto/: BUILD.bazel  buf.yaml
elide/private/: BUILD.bazel  common.bzl  compile_common.bzl  download.bzl  hub.bzl  versions.bzl
elide/rules/: BUILD.bazel  format.bzl  java.bzl  kotlin.bzl  native_image.bzl
tests/: BUILD.bazel  common_test.bzl  format_test.bzl  java_rule_test.bzl  kotlin_rule_test.bzl  native_image_test.bzl  toolchain_test.bzl  versions_test.bzl
tests/kotlin_builder/: BUILD.bazel  BuiltinPluginsTest.kt  ElideCompileTest.kt  FallbackTest.kt  FlagfileTest.kt  JdepsTest.kt  MainTest.kt  RouterTest.kt  SmokeTest.kt  WorkerTest.kt
tools/: sbom_enrich.py  sbom_enrich_test.py  sbom_prep.sh  update_docs.sh
