module(
    name = "rules_elide",
    version = "0.0.1",
    bazel_compatibility = [">=7.4.0"],
    compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_java", version = "9.6.1")

register_toolchains(
    "//tests:_test_elide_toolchain",
    dev_dependency = True,
)
