module(
    name = "rules_elide",
    bazel_compatibility = [">=7.4.0"],
)

bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_java", version = "9.6.1")

bazel_dep(name = "stardoc", version = "0.8.1", dev_dependency = True)

register_toolchains(
    "//tests:_test_elide_toolchain",
    dev_dependency = True,
)
