module(
    name = "rules_elide",
    bazel_compatibility = [">=7.4.0"],
)

bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_java", version = "9.6.1")

bazel_dep(name = "stardoc", version = "0.8.1", dev_dependency = True)
bazel_dep(name = "rules_jvm_external", version = "6.7", dev_dependency = True)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven", dev_dependency = True)
maven.install(
    name = "kt_test_deps",
    artifacts = [
        "org.jetbrains.kotlin:kotlin-test:2.4.0",
        "org.jetbrains.kotlin:kotlin-test-junit5:2.4.0",
        "org.junit.jupiter:junit-jupiter:5.11.3",
        "org.junit.platform:junit-platform-console-standalone:1.11.3",
        "org.junit.platform:junit-platform-launcher:1.11.3",
    ],
)
use_repo(maven, "kt_test_deps")

elide = use_extension("//elide:extensions.bzl", "elide", dev_dependency = True)
elide.install()
use_repo(elide, "elide_toolchains")

register_toolchains(
    "@elide_toolchains//:all",
    dev_dependency = True,
)

register_toolchains(
    "//tests:_test_elide_toolchain",
    dev_dependency = True,
)
