load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

package(default_visibility = ["//visibility:public"])

toolchain_type(name = "toolchain_type")

string_flag(
    name = "graalvm_home",
    build_setting_default = "",
)

exports_files(
    [
        "defs.bzl",
        "extensions.bzl",
        "providers.bzl",
        "toolchain.bzl",
    ],
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
)

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    deps = [":providers"],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    deps = [
        "//elide/private:download",
        "//elide/private:hub",
        "//elide/private:versions",
    ],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        ":providers",
        ":toolchain",
        "//elide/rules:format",
        "//elide/rules:java",
        "//elide/rules:kotlin",
        "//elide/rules:native_image",
        "@bazel_skylib//rules:common_settings",
    ],
)
