load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "string_flag")

package(default_visibility = ["//visibility:public"])

toolchain_type(name = "toolchain_type")

string_flag(
    name = "graalvm_home",
    build_setting_default = "",
)

# Toggles Bazel persistent workers for the elide javac/kotlinc compile actions.
# Default (true): actions advertise `supports-workers` and Bazel reuses a warm
# compiler process. Set false to compile each target as a one-shot
# `elide <tool> -- <args>` process instead (no worker). The one-shot form also
# sidesteps the non-worker fallback gap in WHIPLASH #994, so it is the
# supported way to run elide compiles without workers (e.g. remote execution).
bool_flag(
    name = "use_workers",
    build_setting_default = True,
)

exports_files(
    [
        "defs.bzl",
        "extensions.bzl",
        "providers.bzl",
        "toolchain.bzl",
    ],
)

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
)

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    deps = [":providers"],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    deps = [
        "//elide/private:download",
        "//elide/private:hub",
        "//elide/private:versions",
    ],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        ":providers",
        ":toolchain",
        "//elide/rules:format",
        "//elide/rules:java",
        "//elide/rules:kotlin",
        "//elide/rules:native_image",
        "@bazel_skylib//rules:common_settings",
    ],
)
