load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

package(default_visibility = ["//visibility:public"])

# Tunables for the elide kotlinc compile path, flippable on the command line,
# e.g. `--@rules_elide//config/kotlinc:incremental=true`.

# Opt-in (default off): incremental Kotlin compilation. When true, the elide
# kotlinc action compiles to a classes directory with `--incremental
# --incremental-cache-dir <per-target>` and packs the result into the output
# jar, so a warm rebuild after a small edit recompiles only the dirty subset.
# The cache is undeclared worker-scoped scratch under bazel-out: it persists
# across persistent-worker requests when unsandboxed, and degrades to a correct
# cold compile under `--worker_sandboxing`/remote execution (where it cannot
# persist). javac is unaffected (no IC support upstream). Experimental.
bool_flag(
    name = "incremental",
    build_setting_default = False,
)

# Matches when `--@rules_elide//config/kotlinc:incremental=True`. Lets the Kotlin
# toolchain default resident persistent-worker forwarding on whenever incremental
# compilation is enabled (IC is only useful with a warm resident worker).
config_setting(
    name = "incremental_enabled",
    flag_values = {":incremental": "True"},
)

# Opt-in (default off): Karbine ABI compile-avoidance (WHIPLASH#1111, rules
# issue #11). When true, a Kotlin-only target's `JavaInfo.compile_jar` is a
# header jar produced by a dedicated `elide kotlinc --abi-only` action instead
# of the `java_common.run_ijar`-derived jar. A method-*body* edit yields a
# byte-identical header (same digest), so Bazel prunes every dependent rebuild;
# dependents also key on the fast codegen-free header action rather than the
# full compile. `const`/`inline`/signature changes still change the header, so
# pruning stays sound. Scoped to kt-only targets: `elide kotlinc --abi-only`
# emits Kotlin ABI only, so mixed kt+java targets fall back to run_ijar. Verify
# soundness with //e2e/abi_avoidance. Experimental.
bool_flag(
    name = "abi_compile_avoidance",
    build_setting_default = False,
)
