load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    "java.bzl",
    "kotlin.bzl",
    "native_image.bzl",
])

bzl_library(
    name = "java",
    srcs = ["java.bzl"],
    deps = [
        "//elide:providers",
        "//elide/private:compile_common",
    ],
)

bzl_library(
    name = "kotlin",
    srcs = ["kotlin.bzl"],
    deps = [
        "//elide:providers",
        "//elide/private:compile_common",
    ],
)

bzl_library(
    name = "native_image",
    srcs = ["native_image.bzl"],
    deps = [
        "//elide/private:compile_common",
        "@rules_java//java/common",
    ],
)
