load("@rules_elide//elide:defs.bzl", "elide_kotlin_test")

elide_kotlin_test(
    name = "smoke_test",
    srcs = ["SmokeTest.kt"],
    test_class = "elide.kotlin.builder.SmokeTest",
    kotlinc_opts = ["-jvm-target=21"],
    deps = [
        "@kt_test_deps//:org_jetbrains_kotlin_kotlin_test",
        "@kt_test_deps//:org_jetbrains_kotlin_kotlin_test_junit5",
    ],
    runtime_deps = [
        "@kt_test_deps//:org_junit_platform_junit_platform_console_standalone",
    ],
)

elide_kotlin_test(
    name = "flagfile_test",
    srcs = ["FlagfileTest.kt"],
    test_class = "elide.kotlin.builder.FlagfileTest",
    kotlinc_opts = ["-jvm-target=21"],
    deps = [
        "//elide/kotlin/builder:lib",
        "@kt_test_deps//:org_jetbrains_kotlin_kotlin_test",
        "@kt_test_deps//:org_jetbrains_kotlin_kotlin_test_junit5",
    ],
    runtime_deps = [
        "@kt_test_deps//:org_junit_platform_junit_platform_console_standalone",
    ],
)

elide_kotlin_test(
    name = "router_test",
    srcs = ["RouterTest.kt"],
    test_class = "elide.kotlin.builder.RouterTest",
    kotlinc_opts = ["-jvm-target=21"],
    deps = [
        "//elide/kotlin/builder:lib",
        "@kt_test_deps//:org_jetbrains_kotlin_kotlin_test",
        "@kt_test_deps//:org_jetbrains_kotlin_kotlin_test_junit5",
    ],
    runtime_deps = [
        "@kt_test_deps//:org_junit_platform_junit_platform_console_standalone",
    ],
)

elide_kotlin_test(
    name = "elide_compile_test",
    srcs = ["ElideCompileTest.kt"],
    test_class = "elide.kotlin.builder.ElideCompileTest",
    kotlinc_opts = ["-jvm-target=21"],
    deps = [
        "//elide/kotlin/builder:lib",
        "@kt_test_deps//:org_jetbrains_kotlin_kotlin_test",
        "@kt_test_deps//:org_jetbrains_kotlin_kotlin_test_junit5",
    ],
    runtime_deps = [
        "@kt_test_deps//:org_junit_platform_junit_platform_console_standalone",
    ],
)

elide_kotlin_test(
    name = "fallback_test",
    srcs = ["FallbackTest.kt"],
    test_class = "elide.kotlin.builder.FallbackTest",
    kotlinc_opts = ["-jvm-target=21"],
    deps = [
        "//elide/kotlin/builder:lib",
        "@kt_test_deps//:org_jetbrains_kotlin_kotlin_test",
        "@kt_test_deps//:org_jetbrains_kotlin_kotlin_test_junit5",
    ],
    runtime_deps = [
        "@kt_test_deps//:org_junit_platform_junit_platform_console_standalone",
    ],
)
