load("@rules_elide//elide:defs.bzl", "elide_kotlin_library")

package(default_visibility = ["//visibility:public"])

elide_kotlin_library(
    name = "lib",
    srcs = glob(["*.kt"]),
    module_name = "elide_kotlin_builder",
    kotlinc_opts = ["-jvm-target=21"],
    deps = ["//elide/kotlin/builder/proto:worker_protocol_java_proto"],
)
